--- a/inspector/index.html
+++ b/inspector/index.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Test Inspector</title>
+	<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
 </head>
 <body>
-	<div id="app"></div>
+	<div id="app" style="margin-top: 50px;"></div>
 	<script type="module" src="/src/main.ts"></script>
 
 </body>
